cmake_minimum_required(VERSION 3.22)
project(BOJ C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

#add_executable(BOJ
#        boj1003.c
#        boj10039.c
#        boj10156.c
#        boj10797.c
#        boj10798.c
#        boj10817.c
#        boj10818.c
#        boj10871.c
#        boj10951.c
#        boj1099.c
#        boj11022.c
#        boj1271.c
#        boj12790.c
#        boj1330.c
#        boj13300.c
#        boj13301.c
#        boj14681.c
#        boj1924.c
#        boj2443.c
#        boj2444.c
#        boj2445.c
#        boj2455.c
#        boj2475.c
#        boj2522.c
#        boj2884.c
#        boj2902.c
#        boj3046.c
#        boj9498.c)
add_executable(boj18108 boj18108.c)
add_executable(boj2845 boj2845.c)
add_executable(boj3003 boj3003.c)
add_executable(boj5554 boj5554.c)
add_executable(boj3052 boj3052.c)
add_executable(boj1085 boj1085.c)
add_executable(boj4153 boj4153.c)
add_executable(boj2231 boj2231.c)
add_executable(boj17295 boj17295.c)
add_executable(boj5522 boj5522.c)
add_executable(boj1259 boj1259.c)
add_executable(boj9012 boj9012.c)
add_executable(boj2798 boj2798.c)